grammar.js
    program: $ => repeat(
      // TODO: other kinds of definitions
      choice(
        seq(
          $.keyword_with,
          $.cte,
          repeat(
            seq(
              ',',
              $.cte,
            ),
          ),
          $.statement,
        ),
        $.statement,
      )
    ),

    keyword_select: _ => make_keyword("select"),
    keyword_from: _ => make_keyword("from"),
    keyword_left: _ => make_keyword("left"),
    keyword_right: _ => make_keyword("right"),
    keyword_inner: _ => make_keyword("inner"),
    keyword_outer: _ => make_keyword("outer"),
    keyword_cross: _ => make_keyword("cross"),
    keyword_join: _ => make_keyword("join"),
    keyword_lateral: _ => make_keyword("lateral"),
    keyword_on: _ => make_keyword("on"),
    keyword_where: _ => make_keyword("where"),
    keyword_order_by: _ => make_keyword("order by"),
    keyword_group_by: _ => make_keyword("group by"),
    keyword_having: _ => make_keyword("having"),
    keyword_desc: _ => make_keyword("desc"),
    keyword_asc: _ => make_keyword("asc"),
    keyword_limit: _ => make_keyword("limit"),
    keyword_offset: _ => make_keyword("offset"),
    keyword_end: _ => make_keyword("end"),
    keyword_not: _ => make_keyword("not"),
    keyword_as: _ => make_keyword("as"),
    keyword_distinct: _ => make_keyword("distinct"),
    keyword_case: _ => make_keyword("case"),
    keyword_when: _ => make_keyword("when"),
    keyword_then: _ => make_keyword("then"),
    keyword_else: _ => make_keyword("else"),
    keyword_end: _ => make_keyword("end"),
    keyword_in: _ => make_keyword("in"),
    keyword_and: _ => make_keyword("and"),
    keyword_is: _ => make_keyword("is"),
    keyword_not: _ => make_keyword("not"),
    keyword_force: _ => make_keyword("force"),
    keyword_using: _ => make_keyword("using"),
    keyword_use: _ => make_keyword("use"),
    keyword_index: _ => make_keyword("index"),
    keyword_for: _ => make_keyword("for"),
    keyword_union: _ => make_keyword("union"),
    keyword_all: _ => make_keyword("all"),
    keyword_intersect: _ => make_keyword("intersect"),
    _not_null: $ => seq($.keyword_not, $.keyword_null),
    direction: $ => choice($.keyword_desc, $.keyword_asc),

    // Types
    keyword_null: _ => make_keyword("null"),
    keyword_true: _ => make_keyword("true"),
    statement: $ => seq(
      choice(
        $._select_statement,
        $._delete_statement,
        $._create_statement,
        $._alter_statement,
        $._drop_statement,
        $._insert_statement,
        $._update_statement,
      ),
      ';',
    ),

    _select_statement: $ => seq(
      $.select,
      optional($.from),
      repeat(
        seq(
          choice(
            seq(
              $.keyword_union,
              optional($.keyword_all),
            ),
            $.keyword_except,
            $.keyword_intersect,
          ),
          $.select,
          optional($.from),
        ),
      ),
    ),

    select: $ => seq(
      $.keyword_select,
      choice(
        seq(
          optional($.keyword_distinct),
          $.select_expression,
        ),
        seq(
          $.keyword_distinct,
          '(',
          $.select_expression,
          ')',
        ),
      ),
    ),

    select_expression: $ => choice(
      seq(
        $._field,
        optional($._alias),
        repeat(
          seq(
            ',',
            $._field,
            optional($._alias),
          ),
        ),
      ),
    ),

    _delete_statement: $ => seq(
      $.delete,
      alias($._delete_from, $.from),
      optional($.returning),
    ),

    _create_statement: $ => seq(
      choice(
        $.create_table,
        $.create_view,
        $.create_materialized_view,
        $.create_function,
        $.create_type,
        // TODO type, sequence
      ),
    ),

    _alter_statement: $ => seq(
      choice(
        $.alter_table,
        $.alter_view,
      ),
    ),

    _drop_statement: $ => seq(
      choice(
        $.drop_table,
        $.drop_view,
      ),
    ),

    function_reference: $ => $._reference,

    _reference: $ => seq(
      optional(
        seq(
          field('schema', $.identifier),
          '.',
        ),
      ),
      field('name', $.identifier),
    ),

    _insert_statement: $ => seq(
      $.insert,
      optional($.returning),
    ),

    _column_list_without_order: $ => param_list(alias($._column_without_order, $.column)),
    _update_statement: $ => seq(
      $.update,
      optional($.returning),
    ),

    column_list: $ => param_list($.column),

    column: $ => seq(
      field('name', $.identifier),
      optional($.direction),
    ),

    _field: $ => seq(
      choice(
        $._expression,
        $.all_fields,
      ),
    ),

    all_fields: $ => seq(
      optional(
        seq(
          optional(
            seq(
              field('schema', $.identifier),
              '.',
            ),
          ),
          field('table_alias', $.identifier),
          '.',
        ),
      ),
      '*',
    ),

    case: $ => seq(
      $.keyword_case,
      choice(
        // simplified CASE x WHEN
        seq(
          $._expression,
          $.keyword_when,
          $._expression,
          $.keyword_then,
          $._expression,
          repeat(
            seq(
              $.keyword_when,
              $._expression,
              $.keyword_then,
              $._expression,
            )
          ),
        ),
        // standard CASE WHEN x, where x must be a predicate
        seq(
          $.keyword_when,
          $.predicate,
          $.keyword_then,
          $._expression,
          repeat(
            seq(
              $.keyword_when,
              $.predicate,
              $.keyword_then,
              $._expression,
            )
          ),
        ),
      ),
      optional(
        seq(
          $.keyword_else,
          $._expression,
        )
      ),
      $.keyword_end,
    ),

    field: $ => seq(
      optional(
        seq(
          optional(
            seq(
              field('schema', $.identifier),
              '.',
            ),
          ),
          field('table_alias', $.identifier),
          '.',
        ),
      ),
      field('name', $.identifier),
    ),

    function_call: $ => seq(
      choice(
        $._count_function,
        $.invocation,
      ),
    ),

    invocation: $ => seq(
      $.function_reference,
      '(',
      optional(
        $._function_params,
      ),
      ')',
    ),

    _count_function: $ => seq(
      field('name', alias($.keyword_count, $.identifier)),
      '(',
      choice(
        seq(
          optional($.keyword_distinct),
          field('parameter', $._function_param),
        ),
        seq(
          $.keyword_distinct,
          '(',
          field('parameter', $._function_param),
          ')',
        ),
      ),
      ')',
    ),

    _function_params: $ => seq(
      field('parameter', $._function_param),
      optional(
        repeat1(
          seq(
            ',',
            field('parameter', $._function_param),
          ),
        ),
      ),
    ),

    _alias: $ => choice(
      field('alias', $.identifier),
      seq(
        $.keyword_as,
        field('alias', $.identifier),
      ),
    ),

    from: $ => seq(
      $.keyword_from,
      $.table_expression,
      optional($.index_hint),
      repeat(
        choice(
          $.join,
          $.lateral_join,
        ),
      ),
      optional($.where),
      optional($.group_by),
      optional($.order_by),
      optional($.limit),
    ),

    table_expression: $ => seq(
      optional(
        seq(
          field('schema', $.identifier),
          '.',
        ),
      ),
      field('name', $.identifier),
      optional(
        seq(
          optional($.keyword_as),
          field('table_alias', $.identifier),
        ),
      ),
    ),

    index_hint: $ => seq(
      choice(
        $.keyword_force,
        $.keyword_use,
      ),
      $.keyword_index,
      optional(
        seq(
          $.keyword_for,
          $.keyword_join,
        ),
      ),
      '(',
      field('index_name', $.identifier),
      ')',
    ),

    join: $ => seq(
      optional(
        choice(
          $.keyword_cross,
          $.keyword_left,
          seq($.keyword_left, $.keyword_outer),
          $.keyword_right,
          seq($.keyword_right, $.keyword_outer),
          $.keyword_inner,
        ),
      ),
      $.keyword_join,
      $.table_expression,
      optional($.index_hint),
      choice(
        seq(
          $.keyword_on,
          choice(
            $.predicate,
            $.keyword_true,
            $.keyword_false,
          ),
        ),
        seq(
          $.keyword_using,
          alias($._column_list_without_order, $.column_list),
        )
      )
    ),

    lateral_join: $ => seq(
      optional(
        choice(
          // lateral joins cannot be right!
          $.keyword_cross,
          $.keyword_left,
          seq($.keyword_left, $.keyword_outer),
          $.keyword_inner,
        ),
      ),
      $.keyword_join,
      $.keyword_lateral,
      choice(
        $.invocation,
        $.subquery,
      ),
      optional(
        choice(
          seq(
            $.keyword_as,
            field('alias', $.identifier),
          ),
          field('alias', $.identifier),
        ),
      ),
      $.keyword_on,
      choice(
        $.predicate,
        $.keyword_true,
        $.keyword_false,
      ),
    ),

    where: $ => seq(
      $.keyword_where,
      $.where_expression,
    ),

    group_by: $ => seq(
      $.keyword_group_by,
      $.identifier,
      optional($._having),
    ),

    _having: $ => seq(
      $.keyword_having,
      $.predicate,
    ),

    order_by: $ => seq(
      $.keyword_order_by,
      $.order_expression,
    ),

    order_expression: $ => seq(
      $._field,
      optional($.direction),
      repeat(
        seq(
          ',',
          $._field,
          optional($.direction),
        ),
      ),
    ),

    limit: $ => seq(
      $.keyword_limit,
      $._literal,
      optional($.offset),
    ),

    offset: $ => seq(
      $.keyword_offset,
      $._literal,
    ),

    where_expression: $ => seq(
      $._expression,
    ),

    predicate: $ => choice(
      ...[
        ['+', 'binary_plus'],
        ['-', 'binary_plus'],
        ['*', 'binary_times'],
        ['/', 'binary_times'],
        ['%', 'binary_times'],
        ['^', 'binary_exp'],
        ['=', 'binary_relation'],
        ['<', 'binary_relation'],
        ['<=', 'binary_relation'],
        ['!=', 'binary_relation'],
        ['>=', 'binary_relation'],
        ['>', 'binary_relation'],
        [seq($.keyword_is, $.keyword_distinct, $.keyword_from), 'binary_relation'],
        [seq($.keyword_is, $.keyword_not, $.keyword_distinct, $.keyword_from), 'binary_relation'],
        [$.keyword_and, 'clause_connective'],
        [$.keyword_or, 'clause_connective'],
      ].map(([operator, precedence]) =>
        prec.left(precedence, seq(
          field('left', $._expression),
          field('operator', operator),
          field('right', $._expression)
        ))
      ),
      prec.left('binary_in', seq(
        field('left', $._expression),
        field('operator', $.keyword_in),
        field('right', $.list)
      )),
      seq(
        $._expression,
        $.keyword_is,
        choice(
          $.keyword_null,
          $._not_null,
          $.keyword_true,
          $.keyword_false,
        ),
      ),
      // TODO exists/not exists (subquery)
    ),

    _expression: $ => choice(
      $._literal,
      $.field,
      $.predicate,
      $.subquery,
      $.function_call,
      $.keyword_true,
      $.keyword_false,
      $.keyword_null,
      $.case,
    ),

    subquery: $ => seq(
      '(',
      $.select,
      optional($.from),
      ')',
    ),

    list: $ => param_list($._literal),

    _literal: $ => prec(2,
      choice(
        $.number,
        $.string,
        $.keyword_true,
        $.keyword_false,
        $.keyword_null,
      ),
    ),

    string: $ => choice(
      $._single_quote_literal_string,
      $._double_quote_literal_string,
    ),

    _single_quote_literal_string: $ => seq(
      "'",
      repeat(choice(
        alias($.unescaped_single_string_fragment, $.string_fragment),
        $.escape_sequence
      )),
      "'"
    ),

    _double_quote_literal_string: $ => seq(
      '"',
      repeat(choice(
        alias($.unescaped_double_string_fragment, $.string_fragment),
        $.escape_sequence
      )),
      '"'    
    ),

    // Workaround to https://github.com/tree-sitter/tree-sitter/issues/1156
    // We give names to the token() constructs containing a regexp
    // so as to obtain a node in the CST.
    //
    escape_sequence: $ => token.immediate(seq(
      choice('\\', "''"),
      choice(
        /[^xu0-7]/,
        /[0-7]{1,3}/,
        /x[0-9a-fA-F]{2}/,
        /u[0-9a-fA-F]{4}/,
        /u{[0-9a-fA-F]+}/
      )
    )),

    number: _ => /\d+/,

    identifier: $ => choice(
      $._identifier,
      seq('`', $._identifier, '`'),
      seq('"', $._identifier, '"'),
    ),
    _identifier: _ => /([a-zA-Z_][0-9a-zA-Z_]*)/,
  }

});

function parametric_type($, type, params = ['size']) {
  return choice(
    type,
    seq(
      type,
      '(',
      // first parameter is guaranteed, shift it out of the array
      field(params.shift(), $.number),
      // then, fill in the ", next" until done
      ...params.map(p => seq(',', field(p, $.number))),
      ')',
    ),
  )
}

function param_list(field) {
  return seq(
    '(',
    field,
    repeat(
      seq(',', field)
    ),
    ')',
  )
}

function make_keyword(word) {
  return new RegExp(word + "|" + word.toUpperCase());
}
