test/corpus/select.txt
==================
Select 1
==================

SELECT 1;

---

(program
 (statement
  (select
   (keyword_select)
   (select_expression
    (number)))))

==================
Select 1 + 2
==================

SELECT 1 + 2;

---

(program
 (statement
  (select
   (keyword_select)
   (select_expression
     (predicate
      (number)
      (number))))))

==================
Select string with escapae
==================

SELECT 'This \n person''s test';

---

(program
 (statement
  (select
   (keyword_select)
   (select_expression
    (string
      (string_fragment)
      (escape_sequence)
      (string_fragment)
      (escape_sequence)
      (string_fragment))))))

==================
Select aliased literals
==================

SELECT 1 AS one,
  TRUE AS two,
  NULL AS three;

---

(program
 (statement
  (select
   (keyword_select)
   (select_expression
    (number)
    (keyword_as)
    (identifier)
    (keyword_true)
    (keyword_as)
    (identifier)
    (keyword_null)
    (keyword_as)
    (identifier)))))

==================
Simple select
==================

SELECT * FROM my_table;

---

(program
 (statement
  (select
   (keyword_select)
   (select_expression (all_fields)))
  (from
   (keyword_from)
   (table_expression name: (identifier)))))

==================
Table.*
==================

SELECT my_table.* FROM my_table;

---

(program
 (statement
  (select
   (keyword_select)
   (select_expression
     (all_fields table_alias: (identifier))))
  (from
   (keyword_from)
   (table_expression name: (identifier)))))

==================
Alias.*
==================

SELECT t.* FROM my_table AS t;

---

(program
 (statement
  (select
   (keyword_select)
   (select_expression
     (all_fields table_alias: (identifier))))
  (from
   (keyword_from)
   (table_expression
     name: (identifier)
     (keyword_as)
     table_alias: (identifier)))))

==================
Simple select with fields
==================

SELECT id, name FROM my_table;

---

(program
 (statement
  (select
   (keyword_select)
   (select_expression
    (field name: (identifier))
    (field name: (identifier))))
  (from
   (keyword_from)
   (table_expression name: (identifier)))))

==================
Simple select with fields that look like keywords
==================

SELECT t.from_where, t.created_at, t.updated_at
FROM join_something_on AS where_this_like_that;

---

(program
 (statement
  (select
   (keyword_select)
   (select_expression
    (field table_alias: (identifier) name: (identifier))
    (field table_alias: (identifier) name: (identifier))
    (field table_alias: (identifier) name: (identifier))))
  (from
   (keyword_from)
   (table_expression name: (identifier) (keyword_as) table_alias: (identifier)))))

==================
Simple select with fields field table alias
==================

SELECT m.id, m.name
FROM my_table m;

---

(program
  (statement
    (select
     (keyword_select)
     (select_expression
      (field
       table_alias: (identifier)
       name: (identifier))
      (field
       table_alias: (identifier)
       name: (identifier))))
    (from
     (keyword_from)
     (table_expression
      name: (identifier)
      table_alias: (identifier)))))

==================
Simple select with where
==================

SELECT id
FROM my_table
WHERE id = 4;

---

(program
 (statement
  (select
   (keyword_select)
   (select_expression
    (field
     name: (identifier))))
  (from
   (keyword_from)
   (table_expression
    name: (identifier))
   (where
    (keyword_where)
    (where_expression
     (predicate
      left: (field name: (identifier))
      right: (number)))))))

==================
Simple select with where and string
==================

SELECT id
FROM my_table
WHERE id = "abc";

---

(program
 (statement
  (select
   (keyword_select)
   (select_expression
    (field
     name: (identifier))))
  (from
   (keyword_from)
   (table_expression
    name: (identifier))
   (where
    (keyword_where)
    (where_expression
     (predicate
      left: (field name: (identifier))
      right: (string (string_fragment))))))))

==================
Simple select with IN
==================

SELECT id
FROM my_table
WHERE id IN(1,2);

---

(program
 (statement
  (select
   (keyword_select)
   (select_expression
    (field
     name: (identifier))))
  (from
   (keyword_from)
   (table_expression
    name: (identifier))
   (where
    (keyword_where)
    (where_expression
     (predicate
      left: (field name: (identifier))
      operator: (keyword_in)
      right: (list (number) (number))))))))

==================
Simple select with IF
==================

SELECT IF(m.is_published, 'global', 'local') as published_scope
FROM my_table m;

---

(program
 (statement
  (select
   (keyword_select)
   (select_expression
    (function_call
      (invocation
        (function_reference name: (identifier))
        parameter: (field
          table_alias: (identifier)
          name: (identifier))
        parameter: (string (string_fragment))
        parameter: (string (string_fragment))))
      (keyword_as)
      alias: (identifier)))
  (from
   (keyword_from)
   (table_expression
    name: (identifier)
    table_alias: (identifier)))))

==================
Select with complex IF
==================

SELECT m.is_published, IF(m.is_published > 4, 'global', 'local') published_scope
FROM my_table m;

---

(program
 (statement
  (select
   (keyword_select)
   (select_expression
    (field table_alias: (identifier) name: (identifier))
    (function_call
      (invocation
        (function_reference name: (identifier))
        parameter: (predicate
         left: (field
          table_alias: (identifier)
          name: (identifier))
         right: (number))
        parameter: (string (string_fragment))
        parameter: (string (string_fragment))))
      alias: (identifier)))
  (from
   (keyword_from)
   (table_expression
    name: (identifier)
    table_alias: (identifier)))))

==================
Select with distinct without parenthesis
==================

SELECT DISTINCT id
FROM my_table;

---

(program
 (statement
  (select
   (keyword_select)
   (keyword_distinct)
   (select_expression
    (field
     name: (identifier))))
  (from
   (keyword_from)
   (table_expression
    name: (identifier)))))

==================
Select with count and distinct without parenthesis and alias
==================

SELECT COUNT(DISTINCT id) AS count
FROM my_table;

---

(program
 (statement
  (select
   (keyword_select)
   (select_expression
    (function_call
     name: (identifier)
     (keyword_distinct)
     parameter: (field
      name: (identifier)))
    (keyword_as)
    alias: (identifier)))
  (from
   (keyword_from)
   (table_expression
    name: (identifier)))))

==================
Simple select with AS
==================

SELECT m.id AS m_id, m.a_id a_id
FROM my_table AS m;

---

(program
 (statement
  (select
   (keyword_select)
   (select_expression
    (field
     table_alias: (identifier)
     name: (identifier))
    (keyword_as)
    alias: (identifier)
    (field
     table_alias: (identifier)
     name: (identifier))
    alias: (identifier)))
  (from
   (keyword_from)
   (table_expression
    name: (identifier)
    (keyword_as)
    table_alias: (identifier)))))

==================
Simple select with order by
==================

SELECT id
FROM my_table
WHERE id > 4
ORDER BY id DESC;

---

(program
 (statement
  (select
   (keyword_select)
   (select_expression
    (field
     name: (identifier))))
  (from
   (keyword_from)
   (table_expression
    name: (identifier))
   (where
    (keyword_where)
    (where_expression
     (predicate
      left: (field name: (identifier))
      right: (number))))
   (order_by
    (keyword_order_by)
    (order_expression
     (field name: (identifier))
     (direction (keyword_desc)))))))

==================
Simple select with limit
==================

SELECT id
FROM my_table
LIMIT 5;

---

(program
 (statement
  (select
   (keyword_select)
   (select_expression
    (field
     name: (identifier))))
  (from
   (keyword_from)
   (table_expression
    name: (identifier))
   (limit
    (keyword_limit)
    (number)))))

==================
Simple select with offset
==================

SELECT id
FROM my_table
LIMIT 5
OFFSET 40;

---

(program
 (statement
  (select
   (keyword_select)
   (select_expression
    (field
     name: (identifier))))
  (from
   (keyword_from)
   (table_expression
    name: (identifier))
   (limit
    (keyword_limit)
    (number)
    (offset
     (keyword_offset)
     (number))))))

==================
Simple select with schema
==================

SELECT * FROM my_schema.my_table;

---

(program
 (statement
  (select
   (keyword_select)
   (select_expression (all_fields)))
  (from
   (keyword_from)
   (table_expression schema: (identifier) name: (identifier)))))

==================
Simple select with schema and fully-pathed fields
==================

SELECT my_schema.my_table.my_field FROM my_schema.my_table;

---

(program
 (statement
  (select
   (keyword_select)
   (select_expression (field schema: (identifier) table_alias: (identifier) name: (identifier))))
  (from
   (keyword_from)
   (table_expression schema: (identifier) name: (identifier)))))

==================
IS DISTINCT FROM
==================

SELECT *
FROM my_table
WHERE col IS DISTINCT FROM NULL;

---

(program
 (statement
  (select
   (keyword_select)
   (select_expression
    (all_fields)))
  (from
   (keyword_from)
   (table_expression
    (identifier))
   (where
    (keyword_where)
    (where_expression
     (predicate
      (field
       (identifier))
      (keyword_is)
      (keyword_distinct)
      (keyword_from)
      (keyword_null)))))))

==================
IS NOT DISTINCT FROM
==================

SELECT *
FROM my_table
WHERE col IS NOT DISTINCT FROM NULL;

---

(program
 (statement
  (select
   (keyword_select)
   (select_expression
    (all_fields)))
  (from
   (keyword_from)
   (table_expression
    (identifier))
   (where
    (keyword_where)
    (where_expression
     (predicate
      (field
       (identifier))
      (keyword_is)
      (keyword_not)
      (keyword_distinct)
      (keyword_from)
      (keyword_null)))))))

==================
Distinct
==================

SELECT DISTINCT(id)
FROM my_table;
---

(program
 (statement
  (select
   (keyword_select)
   (keyword_distinct)
   (select_expression
    (field
     name: (identifier))))
  (from
   (keyword_from)
   (table_expression
    name: (identifier)))))

==================
Functions
==================

SELECT MAX(id)
FROM my_table;
---

(program
 (statement
  (select
   (keyword_select)
   (select_expression
    (function_call
      (invocation
        (function_reference name: (identifier))
        parameter: (field name: (identifier))))))
  (from
   (keyword_from)
   (table_expression
    name: (identifier)))))

==================
No-arg functions
==================

SELECT now();
---

(program
 (statement
  (select
   (keyword_select)
   (select_expression
    (function_call
      (invocation
        (function_reference name: (identifier))))))))

==================
More complex function arguments
==================

SELECT
  user_id,
  user_defined_func(user_id, 123, other_func(user_id, 321), user_id + 1 > 5) as something,
  regexp_replace(t.username, '^(.)[^@]+', '\1--', 'g') as username,
  created_at
FROM my_table AS t;
---

(program
 (statement
  (select
   (keyword_select)
   (select_expression
    (field name: (identifier))
    (function_call
     (invocation
      (function_reference name: (identifier))
      parameter: (field name: (identifier))
      parameter: (number)
      parameter:
       (function_call
        (invocation
         (function_reference name: (identifier))
         parameter: (field name: (identifier))
         parameter: (number)))
      parameter:
       (predicate
        left: (predicate left: (field name: (identifier)) right: (number))
        right: (number))))
    (keyword_as) alias: (identifier)
    (function_call
     (invocation
      (function_reference name: (identifier))
      parameter: (field table_alias: (identifier) name: (identifier))
      parameter: (string (string_fragment))
      parameter: (string (escape_sequence) (string_fragment))
      parameter: (string (string_fragment))))
    (keyword_as) alias: (identifier)
    (field name: (identifier))))
  (from
   (keyword_from)
   (table_expression
    name: (identifier) (keyword_as) table_alias: (identifier)))))

==================
Distinct in count function
==================

SELECT COUNT(DISTINCT(id))
FROM my_table;
---

(program
 (statement
  (select
   (keyword_select)
   (select_expression
    (function_call
     name: (identifier)
     (keyword_distinct)
     parameter:
     (field
      name: (identifier)))))
  (from
   (keyword_from)
   (table_expression
    name: (identifier)))))

==================
Group by
==================

SELECT other_id, COUNT(name)
FROM my_table
GROUP BY other_id
HAVING other_id > 10;
---

(program
 (statement
  (select
   (keyword_select)
   (select_expression
    (field name: (identifier))
    (function_call
     name: (identifier)
     parameter: (field name: (identifier)))))
  (from
   (keyword_from)
   (table_expression
    name: (identifier))
   (group_by
    (keyword_group_by)
    (identifier)
    (keyword_having)
    (predicate
     left: (field name: (identifier))
     right: (number))))))

==================
Joins
==================

SELECT a.id, b.id
FROM my_table a
JOIN my_other_table b
ON a.id = b.a_id
WHERE b.c_id = 4;

---

(program
 (statement
  (select
   (keyword_select)
   (select_expression
    (field
     table_alias: (identifier)
     name: (identifier))
    (field
     table_alias: (identifier)
     name: (identifier))))
  (from
   (keyword_from)
   (table_expression
    name: (identifier)
    table_alias: (identifier))
   (join
    (keyword_join)
    (table_expression
     name: (identifier)
     table_alias: (identifier))
    (keyword_on)
    (predicate
     left: (field
      table_alias: (identifier)
      name: (identifier))
     right: (field
      table_alias: (identifier)
      name: (identifier))))
   (where
    (keyword_where)
    (where_expression
     (predicate
      left: (field
       table_alias: (identifier)
       name: (identifier))
      right: (number)))))))

==================
Join with boolean
==================

SELECT *
FROM my_table
JOIN my_other_table ON TRUE;

---

(program
 (statement
  (select
   (keyword_select)
   (select_expression (all_fields)))
  (from
   (keyword_from)
   (table_expression
    name: (identifier))
   (join
    (keyword_join)
    (table_expression
     name: (identifier))
    (keyword_on)
    (keyword_true))
   )))

==================
Joins with hint
==================

SELECT a.id, b.id
FROM my_table a
JOIN my_other_table b USE INDEX FOR JOIN (idx_a)
ON a.id = b.a_id;

---

(program
 (statement
  (select
   (keyword_select)
   (select_expression
    (field
     table_alias: (identifier)
     name: (identifier))
    (field
     table_alias: (identifier)
     name: (identifier))))
  (from
   (keyword_from)
   (table_expression
    name: (identifier)
    table_alias: (identifier))
   (join
    (keyword_join)
    (table_expression
     name: (identifier)
     table_alias: (identifier))
    (index_hint
     (keyword_use)
     (keyword_index)
     (keyword_for)
     (keyword_join)
     index_name: (identifier))
    (keyword_on)
    (predicate
     left: (field
      table_alias: (identifier)
      name: (identifier))
     right: (field
      table_alias: (identifier)
      name: (identifier)))))))

==================
Joins with USING
==================

SELECT a.id, b.id
FROM my_table a
JOIN my_other_table b USING (q, w);

---

(program
 (statement
  (select
   (keyword_select)
   (select_expression
    (field
     table_alias: (identifier)
     name: (identifier))
    (field
     table_alias: (identifier)
     name: (identifier))))
  (from
   (keyword_from)
   (table_expression
    name: (identifier)
    table_alias: (identifier))
   (join
    (keyword_join)
    (table_expression
     name: (identifier)
     table_alias: (identifier))
     (keyword_using)
     (column_list
       (column name: (identifier))
       (column name: (identifier))))
    )))

==================
Specific Joins
==================

SELECT table_a.id
FROM table_a a
LEFT JOIN table_b b
ON a.id = b.a_id
LEFT OUTER JOIN table_c c
ON a.id = c.a_id
RIGHT JOIN table_d d
ON a.id = d.d_id
RIGHT OUTER JOIN table_d d
ON a.id = d.d_id
INNER JOIN table_e e
ON a.id = e.e_id;

---

(program
 (statement
  (select
   (keyword_select)
   (select_expression
    (field
     table_alias: (identifier)
     name: (identifier))))
  (from
   (keyword_from)
   (table_expression
    name: (identifier)
    table_alias: (identifier))
   (join
    (keyword_left)
    (keyword_join)
    (table_expression
     name: (identifier)
     table_alias: (identifier))
    (keyword_on)
    (predicate
     left: (field
      table_alias: (identifier)
      name: (identifier))
     right: (field
      table_alias: (identifier)
      name: (identifier))))
   (join
    (keyword_left)
    (keyword_outer)
    (keyword_join)
    (table_expression
     name: (identifier)
     table_alias: (identifier))
    (keyword_on)
    (predicate
     left: (field
      table_alias: (identifier)
      name: (identifier))
     right: (field
      table_alias: (identifier)
      name: (identifier))))
   (join
    (keyword_right)
    (keyword_join)
    (table_expression
     name: (identifier)
     table_alias: (identifier))
    (keyword_on)
    (predicate
     left: (field
      table_alias: (identifier)
      name: (identifier))
     right: (field
      table_alias: (identifier)
      name: (identifier))))
   (join
    (keyword_right)
    (keyword_outer)
    (keyword_join)
    (table_expression
     name: (identifier)
     table_alias: (identifier))
    (keyword_on)
    (predicate
     left: (field
      table_alias: (identifier)
      name: (identifier))
     right: (field
      table_alias: (identifier)
      name: (identifier))))
   (join
    (keyword_inner)
    (keyword_join)
    (table_expression
     name: (identifier)
     table_alias: (identifier))
    (keyword_on)
    (predicate
     left: (field
      table_alias: (identifier)
      name: (identifier))
     right: (field
      table_alias: (identifier)
      name: (identifier)))))))

==================
Lateral join
==================

SELECT a.id, arr.*
FROM my_table a
JOIN LATERAL unnest(a.arr) AS arr ON TRUE;

---

(program
 (statement
  (select
   (keyword_select)
   (select_expression
    (field
     table_alias: (identifier)
     name: (identifier))
    (all_fields
     table_alias: (identifier))))
  (from
   (keyword_from)
   (table_expression
    name: (identifier)
    table_alias: (identifier))
   (lateral_join
    (keyword_join)
    (keyword_lateral)
    (invocation
      (function_reference name: (identifier))
      parameter: (field
        table_alias: (identifier)
        name: (identifier)))
    (keyword_as)
    alias: (identifier)
    (keyword_on)
    (keyword_true)))))

==================
Lateral join subquery
==================

SELECT a.id, b.*
FROM my_table a
CROSS JOIN LATERAL (SELECT 1) AS b ON TRUE;

---

(program
 (statement
  (select
   (keyword_select)
   (select_expression
    (field
     table_alias: (identifier)
     name: (identifier))
    (all_fields
     table_alias: (identifier))))
  (from
   (keyword_from)
   (table_expression
    name: (identifier)
    table_alias: (identifier))
   (lateral_join
    (keyword_cross)
    (keyword_join)
    (keyword_lateral)
    (subquery
      (select
        (keyword_select)
        (select_expression (number))))
    (keyword_as)
    alias: (identifier)
    (keyword_on)
    (keyword_true)))))

==================
Multiple joins
==================

SELECT a.id, b.id, c.id
FROM my_table a
JOIN my_other_table b
ON a.id = b.a_id
JOIN table_three c
ON a.id = c.a_id;

---

(program
 (statement
  (select
   (keyword_select)
   (select_expression
    (field
     table_alias: (identifier)
     name: (identifier))
    (field
     table_alias: (identifier)
     name: (identifier))
    (field
     table_alias: (identifier)
     name: (identifier))))
  (from
   (keyword_from)
   (table_expression
    name: (identifier)
    table_alias: (identifier))
   (join
    (keyword_join)
    (table_expression
     name: (identifier)
     table_alias: (identifier))
    (keyword_on)
    (predicate
     left: (field
      table_alias: (identifier)
      name: (identifier))
     right: (field
      table_alias: (identifier)
      name: (identifier))))
   (join
    (keyword_join)
    (table_expression
     name: (identifier)
     table_alias: (identifier))
    (keyword_on)
    (predicate
     left: (field
      table_alias: (identifier)
      name: (identifier))
     right: (field
      table_alias: (identifier)
      name: (identifier)))))))

==================
Complex Predicates
==================

SELECT id
FROM my_table m
WHERE m.id > 4 AND id < 3;

---

(program
 (statement
  (select
   (keyword_select)
   (select_expression
    (field
     name: (identifier))))
  (from
   (keyword_from)
   (table_expression
    name: (identifier)
    table_alias: (identifier))
   (where
    (keyword_where)
    (where_expression
     (predicate
      left:
       (predicate
        left:
          (field
           table_alias: (identifier)
           name: (identifier))
        right: (number))
       operator: (keyword_and)
       right:
        (predicate
          left: (field name: (identifier))
          right: (number))))))))

==================
Complex Predicates with order by
==================

SELECT title, id
FROM my_table m
WHERE m.id > 4 AND id < 3
ORDER BY m.title, id ASC;

---

(program
 (statement
  (select
   (keyword_select)
   (select_expression
    (field name: (identifier))
    (field name: (identifier))))
  (from
   (keyword_from)
   (table_expression
    name: (identifier)
    table_alias: (identifier))
   (where
    (keyword_where)
    (where_expression
     (predicate
      left:
       (predicate
        left:
          (field
           table_alias: (identifier)
           name: (identifier))
        right: (number))
       operator: (keyword_and)
       right:
        (predicate
          left: (field name: (identifier))
          right: (number)))))
   (order_by
    (keyword_order_by)
    (order_expression
     (field table_alias: (identifier) name: (identifier))
     (field name: (identifier))
     (direction (keyword_asc)))))))



==================
Index hints
==================

SELECT id
FROM my_table FORCE INDEX (long_index_identifier)
LIMIT 1;

---

(program
 (statement
  (select
   (keyword_select)
   (select_expression
    (field
     name: (identifier))))
  (from
   (keyword_from)
   (table_expression
    name: (identifier))
   (index_hint
    (keyword_force)
    (keyword_index)
    index_name: (identifier))
   (limit
    (keyword_limit)
    (number)))))

==================
Index hints (use)
==================

SELECT id
FROM my_table USE INDEX (long_index_identifier)
LIMIT 1;

---

(program
 (statement
  (select
   (keyword_select)
   (select_expression
    (field
     name: (identifier))))
  (from
   (keyword_from)
   (table_expression
    name: (identifier))
   (index_hint
    (keyword_use)
    (keyword_index)
    index_name: (identifier))
   (limit
    (keyword_limit)
    (number)))))

==================
Union
==================

SELECT 1 UNION ALL SELECT 2;

---
